# weather-pipeline

./: .gitignore  README.md  notes.md  notes.txt  pyproject.toml  requirements.txt  weather_ingestion.py
configs/: default.yml  open-meteo.yml
data/daily/Cairo/2025-12-25/: data_20251225T040833Z.parquet
data/daily/London/2025-12-25/: data_20251225T040833Z.parquet
data/daily/New York/2025-12-25/: data_20251225T040833Z.parquet
data/daily/Rio de Janeiro/2025-12-25/: data_20251225T040833Z.parquet
data/daily/Sydney/2025-12-25/: data_20251225T040833Z.parquet
data/daily/Tokyo/2025-12-25/: data_20251225T040833Z.parquet
data/hourly/Cairo/2025-12-25/: data_20251225T040122Z.parquet  data_20251225T040219Z.parquet  data_20251225T040627Z.parquet
data/hourly/London/2025-12-25/: data_20251225T040122Z.parquet  data_20251225T040219Z.parquet  (+1 more)
docs/: brainstorm.md
examples/: schedule_job.py
examples/airflow/: DAG_example.py
notebooks/: data_validation_duckdb.ipynb  open_meteo_api_exploration.ipynb  weather_data_pipeline_prototype.ipynb
weather_pipeline/: __init__.py  pipeline.py
weather_pipeline/clients/: __init__.py  base.py  openmeteo.py
weather_pipeline/config_handler/: __init__.py  load_configs.py
weather_pipeline/models/: __init__.py  schemas.py
weather_pipeline/state/: __init__.py  json_store.py  models.py  store.py
weather_pipeline/tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_state.py  test_transforms.py  test_writers.py
weather_pipeline/transforms/: __init__.py  transform.py
weather_pipeline/utils/: load_configs.py
weather_pipeline/writers/: __init__.py  base.py  parquet.py
(+21 files in other folders)
